# fluxa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  config.minimal.toml  config.sample.toml  config.test.toml  test_fork_push.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: on.pr.push.yml  release.yml
src/: dashboard.rs  error.rs  http.rs  lib.rs  main.rs  model.rs  monitoring.rs  notification.rs  service.rs  settings.rs  state.rs
