[package]
name = "fluxa"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", default-features = false, features = [
  "http1",
  "tokio",
] }
config = { version = "0.15.7", default-features = false, features = ["toml"] }
env_logger = { version = "0.11.6", default-features = false, features = [
  "auto-color",
] }
log = { version = "0.4.25", default-features = false }
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.138", default-features = false }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
