[package]
name = "fluxa"
version = "0.2.2"
edition = "2021"
description = "Fluxa is a lightweight monitoring tool that checks if a URL returns a successful HTTP status code. It provides simple, continuous monitoring and alerts users of any issues, ideal for developers and system administrators."
readme = "README.md"
license-file = "LICENSE"
categories = [
  "command-line-utilities",
  "development-tools",
  "web-programming::http-client",
  "web-programming::http-server",
]

[dependencies]
axum = { version = "0.8.1", default-features = false, features = [
  "http1",
  "tokio",
] }
clap = "4.5.35"
config = { version = "0.15.8", default-features = false, features = ["toml"] }
env_logger = { version = "0.11.6", default-features = false, features = [
  "auto-color",
] }
log = { version = "0.4.25", default-features = false }
reqwest = { version = "0.12.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.138", default-features = false }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
